fixed a few small layout issues

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body {
 }
 
 .walker__wrapper {
-  display: flex;
+  /* display: flex; */
   /* justify-content: space-evenly; */
   /* align-items: center; */
   height: 75px;
@@ -230,25 +230,43 @@ i {
   align-items: center;
   column-gap: 0.5rem;
   margin-top: 3rem;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  padding: 0 1rem;
 }
 
 .input__wrapper {
   display: flex;
-  height: 3rem;
+  height: 4rem;
   margin: 0 0.5rem;
-  border: 1px solid red;
   border-radius: 20px;
   align-items: center;
   justify-content: space-around;
+  background-color: white;
+  border: 1px solid lightgray;
 }
 
 .input__wrapper > input {
+  height: 2rem;
   border: none;
+  background-color: none;
+  width: 80%;
+  text-align: center;
+  font-size: 1.4rem;
+}
+
+.input__wrapper > input:focus {
   outline: none;
 }
 
 .la-chevron-circle-right {
   color: black;
   font-size: 32px;
+}
+
+.la-chevron-circle-right:hover {
+  cursor: pointer;
+}
+
+.la-ellipsis-v {
+  margin-left: 3rem;
 }
